5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1791_1593.log
== TEST (2019-05-29 14:08:36) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: "))


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:46) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: "))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:58) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: "))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:09) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: "))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:55) 
-- CODE:
from numpy import*
notas = array(eval(input("notas:"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:22) 
-- CODE:
from numpy import*
notas = array(eval(input("notas: ")
-- ERROR:
File "XXXX", line 3
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:28) 
-- CODE:
from numpy import*
notas = array(eval(input(notas: ")
-- ERROR:
File "XXXX", line 2
    notas = array(eval(input(notas: ")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:47) 
-- CODE:
from numpy import*
notas = array(eval(input("notas "))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:54) 
-- CODE:
from numpy import*
notas = array(eval(input("notas:"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:56) 
-- CODE:
from numpy import*
notas = array(eval(input("notas:"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:08) 
-- CODE:
from numpy import *
notas = array(eval(input("notas:"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:06) 
-- CODE:
from numpy import *
notas = float(input("notas: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:39) 
-- CODE:
from numpy import *
notas = float(input("notas: "))
print(notas
-- ERROR:
File "XXXX", line 4
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:44) 
-- CODE:
from numpy import *
notas = float(input("notas: "))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:29) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:31) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[i] * i



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:42) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[i] * i
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:42) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[1] + notas[2]*2 + notas[3]*3 + notas[4] * 4 + notas[5]*5 / size(vet)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:34) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:03) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
print(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:10) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
print(notas)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:16) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(vet) * 5 / (size(vet))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:41) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(notas / (size(notas))
print(m)

-- ERROR:
File "XXXX", line 4
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:03) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(notas)/ (size(notas))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:12) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(notas)/ (size(notas))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:31:28) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(notas)/ (size(notas))
print(m)

-- EXECUTION TIME:
0.400297
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.715
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
1.375
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
2.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:32) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(notas)/ (size(notas))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:44) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = sum(notas) * (size(notas)) / (size(notas))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:29) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 + notas[3] * 4 / (size(notas))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:09) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 + notas[3] * 4 / 1 + 2 + 3 + 4
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:13) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 + notas[3] * 4 / notas[0] + notas[1] + notas[2] + notas[3]
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:44) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 + notas[3] * 4 //notas[0]+ notas[1] + notas[2] + notas[3]
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:17) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 + notas[3] * 4 / notas[0]+notas[1] + notas[2] + notas[3]
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:49) 
-- CODE:
from numpy import *
notas = array(eval(input("notas: ")))
m = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 / notas[0]+notas[1] + notas[2] 
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:28) 
-- CODE:
#rom numpy import *
#otas = array(eval(input("notas: ")))
# = notas[0] * 1 + notas[1] * 2 + notas[2] * 3 / notas[0]+notas[1] + notas[2] 
#rint(m)
m = 27.9/6.15
print(m)

-- OUTPUT:
4.536585365853658
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:07) 
-- CODE:
from numpy import *
otas = array(eval(input("notas: ")))
m= notas[0] * 1 + notas[1] * 2 + notas[2] * 3 / 4.53
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:45) 
-- CODE:
from numpy import *
notas= array(eval(input("notas: ")))
m= notas[0] * 1 + notas[1] * 2 + notas[2] * 3 / 4.53
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
